<resources>
    <string name="app_name">Preview</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="drawer_title">TITLE</string>

    <!-- Description of the icon that opens the navigation drawer, used by accessibility. -->
    <string name="drawer_open">Open navigation drawer</string>

    <!-- Description of the icon that closes the navigation drawer, used by accessibility. -->
    <string name="drawer_close">Close navigation drawer</string>

    <!-- Navigation Header -->
    <string name="country">国</string>

    <!-- Country -->
    <string name="country_jp">日本</string>
    <string name="country_us">United States</string>
    <string name="country_kr">Korea</string>
    <string name="country_gb">United Kingdom</string>

    <!-- Navigation Item -->
    <string name="nav_top_chart">トップチャート</string>
    <string name="nav_search">検索結果</string>
    <string name="nav_source">Source</string>
    <string name="nav_playlist">プレビューキュー</string>
    <string name="nav_submenu">Sub Menu</string>

    <string name="track_select_action_preview">プレビュー</string>
    <string name="track_select_action_preview_all">連続プレビュー</string>
    <string name="track_select_action_detail">詳細ページ(外部サイト)</string>
    <string name="track_select_action_search_lyric">歌詞検索(外部サイト)</string>
    <string name="track_select_action_search_lyric_beta">歌詞検索（β）</string>
    <string name="track_search_no_result">No Result</string>
    <string name="lyric_search_no_result">見つかりませんでした。</string>
    <string name="playlist_no_track">No Track</string>

    <string name="search_type_artist">アーティスト検索</string>
    <string name="search_type_collection">アルバム検索</string>
    <string name="search_type_other_collection">他のアルバム検索</string>


</resources>
