<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nav_mainmenu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_ranking"
            android:icon="@android:drawable/ic_media_play"
            android:title="@string/nav_top_chart"/>
        <item
            android:id="@+id/nav_search"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/nav_search"/>

        <item
            android:id="@+id/nav_playlist"
            android:icon="@android:drawable/ic_media_ff"
            android:title="@string/nav_playlist"/>

    </group>

    <group
        android:id="@+id/nav_radio"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_802"
            android:icon="@android:drawable/ic_media_pause"
            android:title="@string/nav_802"/>
    </group>

    <item
        android:id="@+id/nav_submenu"
        android:checkableBehavior="none"
        android:title="@string/nav_submenu">
        <menu>
            <item
                android:id="@+id/nav_source"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/nav_source"/>
        </menu>
    </item>

</menu>